--- a/src/index.css
+++ b/src/index.css
@@ -102,12 +102,13 @@ button:focus-visible {
 }
 
 body {
+  background-size: 110%;
   background-image: url("./images/FengShuiMall.jpeg");
   background-attachment: fixed;
   background-repeat: no-repeat;
   color: black;
   background-position: center;
-  background-color: rgb(152, 152, 117);
+  background-color: rgb(47, 47, 27);
 }
 
 a {
@@ -123,9 +124,19 @@ a:hover {
   color: rgb(80, 80, 80);
 }
 
+.price {
+  font-size: 2vw;
+}
+
 input {
+  color: white;
+  background-image: url("./images/gold3.jpeg");
   background-color: rgb(132, 138, 65);
   text-align: center;
+}
+::placeholder {
+  color: rgb(205, 203, 203);
+  text-shadow: black;
 }
 
 .image {
@@ -142,12 +153,18 @@ input {
   width: 33vw;
 }
 
+.cardHeader {
+  text-decoration: bold;
+  font-size: 150%;
+  text-shadow: 5px 2px 2px rgb(0, 0, 0);
+}
+
 .productCard {
   background-image: url("./images/gold2.jpeg");
   opacity: 95%;
-  color: black;
+  color: rgb(192, 190, 190);
   text-decoration: bold;
-  text-shadow: 2px 2px 1px rgb(132, 123, 74);
+  text-shadow: 1px 4px 5px rgb(0, 0, 0);
   background-color: rgb(132, 138, 65, 80%);
   width: 100%;
   padding: 1em;
@@ -156,12 +173,15 @@ input {
 }
 
 button {
+  border-style: solid black;
   background-image: url("./images/gold1.jpeg");
-  background-color: rgb(87, 95, 7);
+  background-color: rgb(105, 106, 103);
   border-radius: 3px;
   width: 40%;
   font-size: 2vw;
   text-align: center;
+  color: white;
+  font-family: 'Franklin Gothic Medium';
 }
 
 .store {
@@ -226,8 +246,8 @@ em {
   text-decoration-line: underline;
 }
 
-.NavBar {
+/* .NavBar {
   display: block;
   position: absolute;
   text-align: center;
-}
+} */
