--- a/src/index.css
+++ b/src/index.css
@@ -1,72 +1,4 @@
-/* :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-} */
+/* 
 
 @mixin flexbox() {
   display: -webkit-box;
@@ -90,8 +22,18 @@ button:focus-visible {
   -ms-flex-order: $val;     
   -webkit-order: $val;  
   order: $val;
+} */
+
+.error {
+  color: rgb(189, 35, 35);
+  font-size: 2vw;
+  text-shadow: none;
+  font-style: italic;
 }
 
+img {
+  border-radius: 10px;
+}
 .wrapper {
   @include flexbox();
 }
@@ -102,6 +44,7 @@ button:focus-visible {
 }
 
 body {
+  text-align: center;
   background-size: 110%;
   background-image: url("./images/FengShuiMall.jpeg");
   background-attachment: fixed;
@@ -130,7 +73,7 @@ a:hover {
 
 input {
   color: white;
-  background-image: url("./images/gold3.jpeg");
+  background-image: url("./images/gold2.jpeg");
   background-color: rgb(132, 138, 65);
   text-align: center;
 }
@@ -140,7 +83,7 @@ input {
 }
 
 .image {
-  width: 20%;
+  width: 30%;
   text-align: center;
   opacity: 85%;
 }
@@ -148,15 +91,13 @@ input {
 .container {
   display: flex;
   flex-direction: row;
+  width: 100%;
   flex-flow: row wrap;
-  align-content: flex-start;
-  width: 33vw;
-}
-
-.cardHeader {
-  text-decoration: bold;
-  font-size: 150%;
-  text-shadow: 5px 2px 2px rgb(0, 0, 0);
+  font-family: "sans";
+  font-size: 1.5vw;
+  text-shadow: 2px 2px 2px rgb(100, 105, 17);
+  border-radius: 10px;
+  justify-content: space-around;
 }
 
 .productCard {
@@ -166,10 +107,16 @@ input {
   text-decoration: bold;
   text-shadow: 1px 4px 5px rgb(0, 0, 0);
   background-color: rgb(132, 138, 65, 80%);
-  width: 100%;
+  width: 20vw;
   padding: 1em;
   border: 2px solid rgb(91, 79, 2);
   border-radius: 2vw;
+}
+
+.cardHeader {
+  text-decoration: bold;
+  font-size: 150%;
+  text-shadow: 5px 2px 2px rgb(0, 0, 0);
 }
 
 button {
@@ -184,25 +131,33 @@ button {
   font-family: 'Franklin Gothic Medium';
 }
 
-.store {
-  font-family: "Cedarville Cursive";
-  font-size: 4vw;
-  text-shadow: 2px 2px 2px rgb(100, 105, 17);
-  /* background-color: rgb(0, 0, 0, 10%); */
-  /* border: 1px; */
-  width: 70%;
-  border-radius: 10px;
-}
-
 .cart {
   background-image: url("./images/gold2.jpeg");
-  opacity: 80%;
+  opacity: 95%;
   background-color: rgb(132, 138, 65, 80%);
-  width: 100%;
+  width: 30%;
   padding: 1em;
   border: 2px solid rgb(91, 79, 2);
   border-radius: 2vw;
+  color: rgb(192, 190, 190);
+  text-decoration: bold;
+  text-shadow: 1px 4px 5px rgb(0, 0, 0);
+  background-color: rgb(132, 138, 65, 80%);
+  font-size: 1.5vw;
 }
+
+/* .productCard {
+  background-image: url("./images/gold2.jpeg");
+  opacity: 95%;
+  color: rgb(192, 190, 190);
+  text-decoration: bold;
+  text-shadow: 1px 4px 5px rgb(0, 0, 0);
+  background-color: rgb(132, 138, 65, 80%);
+  width: 20vw;
+  padding: 1em;
+  border: 2px solid rgb(91, 79, 2);
+  border-radius: 2vw;
+} */
 
 .loading {
 
@@ -214,6 +169,10 @@ button {
     width: 70%;
     border-radius: 10px;
   
+}
+
+.storeHeader {
+  font-family: 'Cedarville Cursive';
 }
 
 .cartHeader {
