--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,3 @@
-.error {
-  color: rgb(189, 35, 35);
-  font-size: 2vw;
-  text-shadow: none;
-  font-style: italic;
-}
-
-img {
-  border-radius: 10px;
-}
-
 body {
   text-align: center;
   background-size: 110%;
@@ -26,15 +15,29 @@ a {
   color: black;
   text-decoration: none;
 }
+
 a:active {
   color: rgb(127, 129, 102);
 }
+
 a:hover {
   color: rgb(80, 80, 80);
 }
 
-.price {
-  font-size: 2vw;
+.image {
+  border-radius: 10px;
+  height: 50%;
+  text-align: center;
+  opacity: 85%;
+  align-self: center;
+}
+
+.cardHeader {
+  background-color: rgb(148, 127, 12);
+  border-radius: 4px;
+  text-decoration: bold;
+  font-size: 150%;
+  color: black;
 }
 
 input {
@@ -43,46 +46,15 @@ input {
   background-color: rgb(132, 138, 65);
   text-align: center;
 }
+
 ::placeholder {
   color: rgb(205, 203, 203);
   text-shadow: black;
 }
 
-.image {
-  width: 30%;
-  text-align: center;
-  opacity: 85%;
-}
-
-.container {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  flex-flow: row wrap;
-  font-family: "sans";
-  font-size: 1.5vw;
-  text-shadow: 2px 2px 2px rgb(100, 105, 17);
-  border-radius: 10px;
-  justify-content: space-around;
-}
-
-.productCard {
-  background-image: url("./images/gold2.jpeg");
-  opacity: 95%;
-  color: rgb(192, 190, 190);
-  text-decoration: bold;
-  text-shadow: 1px 4px 5px rgb(0, 0, 0);
-  background-color: rgb(132, 138, 65, 80%);
-  width: 20vw;
-  padding: 1em;
-  border: 2px solid rgb(91, 79, 2);
-  border-radius: 2vw;
-}
-
-.cardHeader {
-  text-decoration: bold;
-  font-size: 150%;
-  text-shadow: 5px 2px 2px rgb(0, 0, 0);
+.overflow {
+  height: 10vw;
+  overflow: auto;
 }
 
 button {
@@ -95,6 +67,48 @@ button {
   text-align: center;
   color: white;
   font-family: 'Franklin Gothic Medium';
+  margin: 0 auto;
+}
+
+.price {
+  font-size: 2vw;
+}
+
+.error {
+  color: rgb(189, 35, 35);
+  font-size: 2vw;
+  text-shadow: 2px 2px 2px black;
+  font-style: italic;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  flex-flow: row wrap;
+  font-family: "sans";
+  font-size: 1.5vw;
+  text-shadow: 2px 2px 2px rgb(100, 105, 17);
+  border-radius: 10px;
+  justify-content: space-around;
+  gap: 1vw;
+}
+
+.productCard {
+  height: 50vw;
+  background-image: url("./images/gold2.jpeg");
+  opacity: 95%;
+  color: rgb(192, 190, 190);
+  text-decoration: bold;
+  text-shadow: 1px 4px 5px rgb(0, 0, 0);
+  background-color: rgb(132, 138, 65, 80%);
+  width: 20vw;
+  padding: 1em 1em 1em 1em;
+  border: 2px 2px 2px 2px solid rgb(91, 79, 2);
+  border-radius: 2vw;
+  display: flex;
+  flex-direction: column;
+  
 }
 
 .cart {
